spade-tests/src/snapshots/spade_tests__mod_namespacing__missing_mod_for_directory.snap
---
source: spade-tests/src/mod_namespacing.rs
---
fn just_some_stuff() {}


error: Missing `mod submod;` for src/submod/mod.spade
  ┌─ src/main.spade:1:1
  │
1 │ fn just_some_stuff() {}
  │ ^^^^^^^^^^^^^^^^^^^^^^^ Missing `mod submod;`
  │
  = Consider adding `mod submod;`
  │
1 │ mod submod; fn just_some_stuff() {}
  │ ++++++++++++
